--- a/.releaserc.json
+++ b/.releaserc.json
@@ -14,7 +14,7 @@
         [
             "@semantic-release/exec",
             {
-                "prepareCmd": "sed -i 's/^version = \".*\"/version = \"${nextRelease.version}\"/' Cargo.toml && sed -i 's/^version = \".*\"/version = \"${nextRelease.version}\"/' crates/icebook/Cargo.toml"
+                "prepareCmd": "sed -i 's/^version = \"[^\"]*\"/version = \"${nextRelease.version}\"/' Cargo.toml"
             }
         ],
         [
@@ -22,8 +22,7 @@
             {
                 "assets": [
                     "CHANGELOG.md",
-                    "Cargo.toml",
-                    "crates/icebook/Cargo.toml"
+                    "Cargo.toml"
                 ],
                 "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
             }
