--- a/.releaserc.json
+++ b/.releaserc.json
@@ -24,7 +24,7 @@
                     "CHANGELOG.md",
                     "Cargo.toml"
                 ],
-                "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+                "message": "chore(release): ${nextRelease.version}\n\n${nextRelease.notes}"
             }
         ],
         "@semantic-release/github"
