feat: add URL hash routing, example storybook, and Taskfile
- Add URL hash routing for story navigation (#story-id)
- Create icebook-example crate with Button, Input, Typography, Colors stories
- Add Taskfile.yaml with build, lint, test, and example tasks
- Improve sidebar theme toggle button visibility with border and background
- Improve theme contrast for better readability

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["crates/icebook"]
+members = ["crates/icebook", "crates/icebook-example"]
 resolver = "2"
 
 [workspace.package]
