--- a/crates/icebook/Cargo.toml
+++ b/crates/icebook/Cargo.toml
@@ -27,3 +27,11 @@ wasm-bindgen.workspace = true
 web-sys = { workspace = true, features = ["Window", "Storage", "MediaQueryList", "Location", "History"] }
 console_error_panic_hook.workspace = true
 tracing-wasm.workspace = true
+
+[[example]]
+name = "simple_storybook"
+path = "examples/simple_storybook.rs"
+
+[dev-dependencies]
+iced = { workspace = true }
+once_cell = { workspace = true }
