--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,3 +51,25 @@ jobs:
           GIT_COMMITTER_NAME: github-actions
           GIT_COMMITTER_EMAIL: github-actions@github.com
         run: npx semantic-release
+
+  # Trigger publish workflow after successful release
+  # GITHUB_TOKEN pushes don't trigger other workflows, so we call it explicitly
+  publish:
+    name: Trigger Publish
+    needs: release
+    if: needs.release.outputs.released == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Trigger Publish Workflow
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'publish.yml',
+              ref: 'main',
+              inputs: {
+                version: '${{ needs.release.outputs.version }}'
+              }
+            })
