feat: update to iced 0.15-dev from playtron-os/iced fork
- Update workspace iced dependency to git rev 1fbe0e0
- Update icebook WASM target to use git iced
- Update icebook-example to use git iced for both native and WASM

This is preparation for iced 0.15 release with Rust 1.92 compatibility.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ authors = ["Playtron Team"]
 
 [workspace.dependencies]
 # Iced framework
-iced = { version = "0.14", features = ["svg", "lazy"] }
+iced = { git = "ssh://git@github.com/playtron-os/iced.git", rev = "1fbe0e0", features = ["svg", "lazy"] }
 
 # Utilities
 tracing = "0.1"
