--- a/crates/icebook/Cargo.toml
+++ b/crates/icebook/Cargo.toml
@@ -22,7 +22,7 @@ once_cell.workspace = true
 iced = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-iced = { git = "https://github.com/playtron-os/iced.git", rev = "7d6515d5", features = ["svg", "lazy", "wgpu", "webgl"] }
+iced = { workspace = true }
 wasm-bindgen.workspace = true
 web-sys = { workspace = true, features = ["Window", "Storage", "MediaQueryList", "Location", "History"] }
 console_error_panic_hook.workspace = true
