--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ repository = "https://github.com/playtron-os/icebook"
 authors = ["Playtron Team"]
 
 [workspace.dependencies]
-# Iced framework
-iced = { git = "https://github.com/playtron-os/iced.git", rev = "98ce1e9f", features = ["svg", "lazy"] }
+# Iced framework - default-features = false disables "crisp" pixel snapping which causes rendering issues on some monitors
+iced = { git = "https://github.com/playtron-os/iced.git", rev = "98ce1e9f", default-features = false, features = ["wgpu", "tiny-skia", "hinting", "web-colors", "thread-pool", "linux-theme-detection", "x11", "wayland", "svg", "lazy"] }
 
 # Utilities
 tracing = "0.1"
