--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ authors = ["Playtron Team"]
 
 [workspace.dependencies]
 # Iced framework - default-features = false disables "crisp" pixel snapping which causes rendering issues on some monitors
-iced = { git = "https://github.com/playtron-os/iced.git", rev = "73f16a47", default-features = false, features = ["wgpu", "tiny-skia", "hinting", "web-colors", "thread-pool", "linux-theme-detection", "x11", "wayland", "svg", "lazy"] }
+iced = { git = "https://github.com/playtron-os/iced.git", rev = "caea1212", default-features = false, features = ["wgpu", "tiny-skia", "hinting", "web-colors", "thread-pool", "linux-theme-detection", "x11", "wayland", "svg", "lazy"] }
+# iced = { path = "../iced", default-features = false, features = ["wgpu", "tiny-skia", "hinting", "web-colors", "thread-pool", "linux-theme-detection", "x11", "wayland", "svg", "lazy"] }
 
 # Utilities
 tracing = "0.1"
